snow container add

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     </div>
     <!-- Qualification End -->
 
-
+    <div id="snow-container"></div>
     <!-- Skill Start -->
     <div class="container-fluid py-5" id="skill">
         <div class="container">
