--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
         <a href="index.html" class="navbar-brand ml-lg-3">
-            <h1 class="m-0 display-5"><span class="text-primary">Priya </span>Roy</h1>
+            <h1 class="m-0 display-5"><span class="text-primary">Nipu </span>Roy</h1>
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
                     <h3 class="text-white font-weight-normal mb-3">I'm</h3>
-                    <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">Priya Roy</h1>
+                    <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">Dhirty Roy Nipa</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">Web Designer, Web Developer, Front End Developer, Software Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
@@ -111,7 +111,7 @@
                     <h3 class="mb-4">Software Developer</h3>
                     <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum. Amet dolor stet lorem diam dolor justo et dolor dolor dolor</p>
                     <div class="row mb-3">
-                        <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Priya Roy</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Nipu Roy</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">1 April 2005</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Inter 2 Years</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">2 Years</span></h6></div>
@@ -365,7 +365,7 @@
                     </div>
                     <p>Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet lorem lorem lorem est amet labore eirmod erat clita</p>
                 </div>
-                <div class="col-lg-12 col-md-12 text-center mb-5 border p-5">
+                <div class="col-lg-12 col-md-12 text-center mb-5 border p-2">
                     <div class="d-flex align-items-center justify-content-center mb-4">
                         <i class="fa fa-2x fa-edit service-icon bg-primary text-white mr-3"></i>
                         <h4 class="font-weight-bold m-0">Ethical hacking </h4>
